# eng_words_github

./: .env.example  .gitignore  Makefile  QUICK_START.md  QUICK_START_GSHEETS.md  README.md  START_GENERATION.sh  known_words.csv.example  pyproject.toml
data/: known_words.csv
docs/: ARCHITECTURE.md  BACKLOG_IDEAS.md  CREDENTIALS_EXPLANATION.md  DEVELOPMENT_HISTORY.md  GENERATION_INSTRUCTIONS.md  GOOGLE_SHEETS_SETUP.md  HISTORY_PIPELINE_A.md  LLM_API_KEYS_SETUP.md  ONBOARDING_REFACTOR.md  PIPELINES_OVERVIEW.md  PIPELINE_B_CONTRACTS_AND_RUN.md  PIPELINE_B_FIXES_PLAN.MD  PIPELINE_B_FIXES_PLAN_2.md  PIPELINE_B_MANUAL_QC_INSTRUCTIONS.md  PIPELINE_B_QUALITY_DECISIONS.md  PIPELINE_B_QUALITY_GATE.md  PIPELINE_B_REFACTORING_PLAN.md  QUALITY_FILTERING_PLAN.md  REFACTORING_PLAN_2026.md  REFACTOR_AND_BACKUP_PLAN.md  REMOVED_ARCHIVE.md  WORD_FAMILY_PIPELINE.md  WSD_GOLD_DATASET_USAGE.md  google_pricing.md  openai_pricing.txt  pipeline_b_refactor_baseline.md
scripts/: benchmark_wsd.py  check_index_basis_hypothesis.py  check_quality_b_batch.py  check_test_progress.sh  compare_cards.py  eval_wsd_on_gold.py  freeze_gold_dataset.py  prepare_pipeline_b_sample.py  run_full_generation.sh  run_full_pipeline_b_and_collect_json.py  run_full_synset_aggregation.py  run_gemini_batch.py  run_gold_labeling.py  run_manual_qc_and_collect.py  run_pipeline_b_batch.py  run_quality_investigation.py  run_regression_49.py  run_synset_card_generation.py  test_batch_approaches.py  verify_gold_checksum.py  wait_and_download_batch.py
tests/: __init__.py  test_anki_export.py  test_batch_api.py  test_batch_core.py  test_batch_io.py  test_batch_qc.py  test_batch_schemas.py  test_candidate_selector.py  test_contract.py  test_epub_reader.py  test_example_validator.py  test_examples.py  test_filtering.py  test_filtering_supersenses.py  test_headword.py  test_integration.py  test_integration_pipeline.py  test_llm_aggregator.py  test_llm_base.py  test_llm_providers.py  test_llm_response_cache.py  test_llm_wsd.py  test_mwe_candidates.py  test_phrasal_verbs.py  test_pipeline_b_batch.py  test_pipeline_stage1.py  test_pipeline_wsd.py  (+30 more)
(+202 files in other folders)
